# goal-fw-go2w

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  README.md  build_desktop_sim_workspace.bash  devcontainer.json  run_desktop_sim.bash  start_remote_rviz.bash  start_robot_description.bash
.devcontainer/macos/: Dockerfile  devcontainer.json  start_gui.sh
docker/: Dockerfile  Dockerfile.cuda  entrypoint.sh  run.sh
docs/: architecture.md  desktop-simulation.md  goal-navigation.md  localization.md  map-preparation.md  remote-visualization.md  result-recording.md  topics.md  troubleshooting.md  tuning-parameters.md  vendored-upstreams.md  web-ui.md
humble_ws/src/direct_lidar_inertial_odometry/launch/: dlio.launch.py  dlio.rviz
humble_ws/src/direct_lidar_inertial_odometry/src/dlio/: odom.cc
humble_ws/src/go2w_description/: CMakeLists.txt  package.xml
humble_ws/src/go2w_description/launch/: go2w_rviz.launch
humble_ws/src/go2w_description/urdf/: go2w_description.urdf
humble_ws/src/go2w_imu_publisher/src/: imu_publisher.cpp
humble_ws/src/hesai_lidar/: CMakeLists.txt
humble_ws/src/nav_goal_go2w_bridge/: package.xml  setup.cfg  setup.py
humble_ws/src/nav_goal_go2w_bridge/launch/: velocity_bridge.launch.py
humble_ws/src/nav_goal_go2w_bridge/nav_goal_go2w_bridge/: clamping.py  velocity_bridge_node.py
humble_ws/src/nav_goal_go2w_bridge/test/: test_clamping.py
humble_ws/src/nav_goal_go2w_bringup/: CMakeLists.txt  package.xml
humble_ws/src/nav_goal_go2w_bringup/config/: goal_remote.rviz  pointcloud_to_laserscan.yaml
humble_ws/src/nav_goal_go2w_bringup/launch/: bringup.launch.py  pointcloud_to_laserscan.launch.py  prepare_map.launch.py  robot_description.launch.py
humble_ws/src/nav_goal_go2w_localization/: package.xml  setup.cfg  setup.py
humble_ws/src/nav_goal_go2w_localization/config/: localization.yaml
humble_ws/src/nav_goal_go2w_localization/launch/: localization.launch.py
humble_ws/src/nav_goal_go2w_localization/nav_goal_go2w_localization/: cloud_utils.py  localization_core.py  localizer_node.py  registration.py
humble_ws/src/nav_goal_go2w_localization/test/: test_cloud_utils.py  test_localization_core.py  test_registration.py
humble_ws/src/nav_goal_go2w_map/: package.xml  setup.cfg  setup.py
humble_ws/src/nav_goal_go2w_map/launch/: map_servers.launch.py
humble_ws/src/nav_goal_go2w_map/nav_goal_go2w_map/: finish_map_cli.py  finish_map_core.py  grid_builder_core.py  map_cloud_publisher_node.py  map_prep_core.py  pcd_io.py  pgm_yaml.py  prepare_map_cli.py  provenance.py  terrain_core.py
humble_ws/src/nav_goal_go2w_map/test/: test_finish_map_core.py  test_grid_builder_core.py  test_map_prep_core.py  test_pcd_io.py  test_pgm_yaml.py  test_prepare_map_cli.py
humble_ws/src/nav_goal_go2w_planner/: package.xml  setup.cfg  setup.py
humble_ws/src/nav_goal_go2w_planner/config/: goal_pose_executor.yaml  map_viz_layers.yaml  mppi_trajectory_lines.yaml  nav2_params.yaml
humble_ws/src/nav_goal_go2w_planner/launch/: goal_planner.launch.py  nav2_navigation.launch.py
humble_ws/src/nav_goal_go2w_planner/nav_goal_go2w_planner/: goal_policy.py  goal_pose_executor.py  goal_validation.py  map_viz_layers.py  mppi_trajectory_lines.py
humble_ws/src/nav_goal_go2w_planner/test/: test_goal_policy.py  test_goal_validation.py  test_humble_runtime_compat.py  test_nav2_mppi_config.py
humble_ws/src/nav_goal_go2w_sim/: package.xml  setup.cfg  setup.py
humble_ws/src/nav_goal_go2w_sim/config/: goal_sim.rviz  sim_node.yaml
humble_ws/src/nav_goal_go2w_sim/launch/: sim_bringup.launch.py  sim_only.launch.py
humble_ws/src/nav_goal_go2w_sim/nav_goal_go2w_sim/: __init__.py  dynamic_obstacles.py  gen_sim_map_cli.py  keyboard_pause_node.py  sim_core.py  sim_node.py  world_loader.py
humble_ws/src/nav_goal_go2w_sim/test/: test_dynamic_obstacles.py  test_sim_core.py  test_world_loader.py
humble_ws/src/nav_goal_go2w_sim/worlds/: dead_end.yaml  doorway.yaml  narrow_corridor.yaml  open_room.yaml  ramp_step.yaml  rough_terrain.yaml  stairs.yaml  t_junction.yaml
humble_ws/src/nav_goal_go2w_web/: package.xml  setup.cfg  setup.py
humble_ws/src/nav_goal_go2w_web/launch/: web_ui.launch.py
humble_ws/src/nav_goal_go2w_web/nav_goal_go2w_web/: prep_grid_core.py  prep_web_node.py
humble_ws/src/nav_goal_go2w_web/test/: test_prep_grid_core.py
humble_ws/src/nav_goal_go2w_web/www/: index.html
humble_ws/src/nav_goal_go2w_web/www/css/: style.css
humble_ws/src/nav_goal_go2w_web/www/js/: app.js  cloud_renderer.js  map_renderer.js
maps/sim_open_room/: grid.pgm  grid.yaml  metadata.yaml  viz.pcd
scripts/: bringup_tmux.sh  build_image.sh  enter.sh  finish_prepare_map.sh  prepare_map_tmux.sh  smoke_test.sh
