<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2w_description</name>
  <version>1.0.0</version>
  <description>Official Unitree Go2-W visual description package, adapted for ROS 2 installation.</description>
  <maintainer email="TODO@email.com">Unitree Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
