<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_goal_go2w_sim</name>
  <version>0.1.0</version>
  <description>
    Desktop closed-loop simulator for the Go2W frontier-navigation
    stack. Replaces robot sensors and odometry with /scan, /clock, and
    odom->base_link while keeping the selected mapping mode, frontier selection, and Nav2
    unchanged.
  </description>

  <maintainer email="67k.tanaka@gmail.com">Koki Tanaka</maintainer>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>nav_goal_go2w_map</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>ament_index_python</depend>

  <exec_depend>go2w_slam_toolbox_bringup</exec_depend>
  <exec_depend>nav_frontier_go2w_bringup</exec_depend>
  <exec_depend>nav_frontier_go2w_frontier</exec_depend>
  <exec_depend>nav_frontier_go2w_terrain</exec_depend>
  <exec_depend>nav_frontier_go2w_planner</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
