<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_goal_go2w_web</name><version>0.1.0</version>
  <description>Optional browser operator interface for Go2W goal navigation and map preparation.</description>
  <maintainer email="67k.tanaka@gmail.com">Koki Tanaka</maintainer><license>MIT</license>
  <depend>rclpy</depend><depend>sensor_msgs</depend><depend>nav_msgs</depend><depend>std_msgs</depend><depend>std_srvs</depend><depend>python3-numpy</depend>
  <exec_depend>ament_index_python</exec_depend><exec_depend>launch</exec_depend><exec_depend>launch_ros</exec_depend>
  <exec_depend>rosbridge_server</exec_depend><exec_depend>rosapi</exec_depend><exec_depend>nav_goal_go2w_map</exec_depend><exec_depend>direct_lidar_inertial_odometry</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
